fixed overflow images in css
--HG--
extra : convert_revision : svn%3A356ac844-b298-4ddf-8d45-ff5fd532e645/planet-terasi/trunk%40216

--- a/output/terasi.css
+++ b/output/terasi.css
@@ -36,6 +36,7 @@ pre, code {
 
 img {
     padding: 5px;
+    overflow: hidden;
 }
 
 img.wp-smiley {
